Consultar trasações do banco de dados

--- a/WindowsFormsApp1/View/FormTransacoes.resx
+++ b/WindowsFormsApp1/View/FormTransacoes.resx
@@ -134,4 +134,34 @@
         f3/si6IofgDnFbsF6aCG7QAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="BTNPesquisar1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAABX9JREFUeF7tWk1oJFUQns26Ku5menp2Mv2zk+nXM4MrBvQQf1FkVxAVREE9COJB
+        EH9gxcPiMVmzggfBk3hQ/DmtHqIn96AoJOxFWdDD7sVV1oOwMSoqSxZNIhn9arpm8vr1m5hhpnvSmf7g
+        I5Oueq+qut9P1evOZciQIUM/yE/UGwXbO2444sOCLRYLjvgef6+0GPxeDGTQKU/WuVm6ccCqlxHQSfA8
+        Avy3N1Ib7yT1wd2lBxMTUwcQxAkEsBINrFe2+pilPrn7nQ3D8R6Dw7+EgxgIlwuO9yib2ZEYg5OvKE7L
+        XDdt8Zlp+8fwVI+Ou/7hUunwOJF+0zWSkQ7pKm1lniBbgckdAtd1r0MA8xpniUtY3J4rFht5Vv9fkC61
+        MWzxs6Y/0Jsnm6w+dODJ+x9rHF3F9RnLsvazXs+gttRH0JfavzcPleGPBDijG/bLRUvcwSp9g/qiPhUb
+        RJoOwwMveIpT3vmiW59klYGB+qS+I/aGtTDyVhd6KjRni4caFVYZOIKbEBkJy0PZImEY+3zIkdW8JW5n
+        cWzg6aCuCbMsTgb7y76F4agkOf4Mi2MHL4ySbW8l0YwRBpHeyg6IpX5W+15BtjRb5ByL44e6GNGezaLE
+        YDriedkH8ByL4kVQ1YUMr1E2x+LEQMkSbIcyxkSqSDz947JRSl1ZlDhMS3wu+0K+sSg+cD0v3QD/GIsS
+        R1BXbPoC306xKD7A0KJsFHf9KIsSh2F594Z9EQssig98etMxSpUcixLHQVfcIPsCXmBRfIAROsbqGB3G
+        AtgGL4TSDfBWWBQfYGjEb0A2BUZ8Ecy2wVFPhDSp8Hov532DwtBSYQLu9OgWQwTcgFA5TKXpSJXD/Mpr
+        dA9ECDAcORIb5ElwN/CR2JpiO9kjMYLuUJT+j+NEuI2SU5/G0FeDH86hKCHxY3FH/KHaM13xBKsMB3Ai
+        /hcjZe9O6lOx0ebZUmnSZdWhYAxPXfdesO9XYzzNZkF12Ku8lLf920zbexC+vIn/z4KLBct7NV+pFLm7
+        +LDVy1HarihP6CVZIl3a5zVbXZuX1WvQ3VCvtWiJP8GX0O2eoPf4QK/H1Z1B5jqlrpS/UxFDlRwFSqTf
+        dI1knN5u9Xp81jRrBkbXaY2sK6lOEEJcy77GB14Yu83Xfqh+ILEXQ/51jV5Xom75emJC2Nw+PmzO3UF9
+        IuPP6LY6Wl8wVf6W9TEVPjLd2t34/TT4uyxj/lQo+zdzF/EiyBjFHHhOcmC7pDZzW2V4nBTJbX7E5b2B
+        NCjc8NS/U3SIVwqW/zCrJQOq1PA06TO5U3BgAbwQPN3WKMFvsRDItv+ZXMHx70G7TmB4+l+xqAOjWjUx
+        db6Q9ZhNw/Zfhkrsi2Ns4Kkmb5FNo+zfx2IJ0/sQ7FuSnsz3c1NTV7Ni+oD14ctwQN4/huU/w+IQ+ARJ
+        t12eGXevL7FaumA4VaoPQgthQP8NiDvrQRt5R9wPeSSPAC8W7eqNrJYuYC14ShMQ6J/WJWAUKOQXo/ri
+        ctERD7BauoA5/jgC+EsJCGydXglW64CGPK6fCeu2uIEd4kVWSxcMp3YLArikBET81XSrd7HaJhqNayD7
+        QNFtEdvnC6yVLhysVA4hgG/UgMA1miqsJmMPbYeQNxX9DbPs38Q66UJQnGk/3qSa4DWoRD6wRMH0COSh
+        137geyxOJcaoHFYCavMTXZluWrWHwnrebyxKL0zHexLBaD61Fd9Gv2mc3qfoNHExvZliG3yipPuEfylv
+        125ltcgIoDqCRekHFkAPQemKslXT8t4xLfF2JKFy/He5+e4AfcuAef1pKMjuXDesao2b7ips5yCl2a2e
+        2DWgA1T9WYH3A22JrLbLgTKYFkjD8Z/ll61HcrkjV7E0Q4YMGRi53H+kHKi7aPYa9AAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
 </root>
